---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, &src)"

---
error: `bool` can not be used as a parameter to `address(..)`
  ┌─ compile_errors/call_address_with_wrong_type.fe:3:17
  │
3 │         address(true)
  │                 ^^^^ wrong type
  │
  = Note: address(..) expects a parameter of a contract type, numeric or address


